versioned_docs/version-1.0.19/14-administration/08-profile-settings.md
---
title: 个人设置与 API Key
sidebar_label: 个人设置与 API Key
---

# 14.8 个人设置与 API Key

个人设置面向所有已登录用户，用于维护个人资料、头像、密码和用户级 API Key。打开右上角头像菜单后，点击顶部账户项（显示头像、邮箱和姓名）即可打开该对话框。

## 14.8.1 对话框结构

个人设置对话框包含以下页签：

| 页签 | 说明 |
|---|---|
| **个人信息** | 查看和编辑姓名、邮箱、手机号、职位、描述等个人资料 |
| **密钥** | 创建、复制、更新到期时间和删除用户 API Key |
| **MFA** | 预留的多因素认证入口；当前版本显示“开发中”占位内容 |

## 14.8.2 个人信息

### 14.8.2.1 可维护字段

**个人信息**页签默认以只读方式显示以下内容。点击底部的**编辑**后，可进入编辑态。

| 字段 | 说明 |
|---|---|
| **名 / 姓** | 个人姓名 |
| **邮箱** | 登录邮箱，只读显示，不能在此处修改 |
| **手机号** | 联系电话，包含国家或地区代码 |
| **职位** | 可选职位信息 |
| **描述** | 可选个人说明 |

点击对话框左上区域的头像可上传新的头像图片。仅支持 `JPG`、`JPEG` 和 `PNG` 格式，文件大小必须小于 `1 MB`。

### 14.8.2.2 密码修改

使用用户名密码登录的用户在编辑个人信息时还可以修改密码。保存时，系统会要求再次输入当前密码进行确认。通过 OAuth 2.0 或其他单点登录方式登录的用户不会看到密码输入框。

## 14.8.3 API Key

用户 API Key 适合需要长期稳定凭据的脚本、CLI 和 MCP 客户端。API Key 继承创建者当前用户的权限范围，调用接口时需要放入 `Authorization: Bearer <IDMP_API_KEY>` 请求头中。复制得到的 API Key 本身以 `api_` 开头，不包含 `Bearer` 前缀。

### 14.8.3.1 列表信息

**密钥**页签中的列表默认按创建时间倒序显示，并提供以下信息与操作：

| 列或操作 | 说明 |
|---|---|
| **标题** | 用户自定义标题；同一用户下必须唯一 |
| **密钥** | 以掩码形式显示的 API Key；点击复制图标可再次复制完整值 |
| **添加时间** | API Key 的创建日期 |
| **到期时间** | 当前到期时间；点击该值可打开“修改到期日”对话框 |
| **删除** | 删除该 API Key，确认后立即失效 |

### 14.8.3.2 创建 API Key

1. 切换到**密钥**页签，点击 **新增 API Key**。
2. 输入唯一标题。
3. 在**永不过期**和**到期日期**之间选择一种过期策略。如果指定日期，所选时间必须晚于当前时间。
4. 点击**创建**。
5. 创建成功后，系统会弹出对话框显示完整 API Key。请立即复制并妥善保存。

列表页仅显示掩码。如果后续需要再次获取完整值，可使用列表行内的复制按钮。

### 14.8.3.3 修改到期时间

点击目标 API Key 在**到期时间**列中的当前值，可打开**修改到期日**对话框。标题在该对话框中保持只读，您可以重新选择**永不过期**或新的**到期日期**。

### 14.8.3.4 删除 API Key

点击目标 API Key 行末的删除图标并确认后，该 API Key 将立即失效。对于不再使用的自动化脚本或外部工具，建议及时删除对应的 API Key。

### 14.8.3.5 使用方式与限制

- API Key 适用于需要长期稳定凭据的集成场景，例如 CLI、脚本或 MCP 客户端。
- 请求头格式为 `Authorization: Bearer <IDMP_API_KEY>`。如果客户端单独要求 Bearer Token 值，仅填写原始 `api_...` 形式的 API Key 即可。
- API Key 继承创建者当前用户的角色权限与元素访问范围。
- 当 API Key 到期、被删除，或所属用户被停用或删除后，该 API Key 将立即失效。
- 使用 API Key 鉴权的请求不能访问 API Key 管理接口；这包括查看列表、创建、复制、修改和删除。此类管理操作需要在已登录的 Web UI 中完成。

有关在 SDK 和 MCP 客户端中使用 API Key 的示例，请参见[第 15.1.3 节](../15-integrating-with-other-systems/01-client-sdk/03-authentication.md)和[第 15.2 节](../15-integrating-with-other-systems/02-mcp-interface.md)。

## 14.8.4 MFA

当前版本中的 **MFA** 页签仅显示“开发中”占位内容，尚不支持正式配置。
