versioned_docs/version-1.0.20/14-administration/08-profile-settings.md
---
title: 个人设置与 API Key
sidebar_label: 个人设置与 API Key
---

# 14.8 个人设置与 API Key

个人设置面向所有已登录用户，用于维护个人资料、头像、密码和用户级 API Key。打开右上角头像菜单后，点击顶部账户项（显示头像、邮箱和姓名）即可打开该对话框。

## 14.8.1 对话框结构

个人设置对话框包含以下页签：

| 页签         | 说明                                                                  |
| ------------ | --------------------------------------------------------------------- |
| **个人信息** | 查看和编辑姓名、邮箱、手机号、职位、描述等个人资料                    |
| **API Key**  | 创建、复制、更新到期时间和删除用户 API Key                            |
| **Passkey**  | 注册和管理用于二次认证（MFA）的 Passkey，详见[第 14.10 节](10-mfa.md) |
| **Agent**    | 基于 MCP 模板配置个人 MCP 服务器连接                                  |

## 14.8.2 个人信息

### 14.8.2.1 可维护字段

**个人信息**页签默认以只读方式显示以下内容。点击底部的**编辑**后，可进入编辑态。

| 字段 | 说明 |
|---|---|
| **名 / 姓** | 个人姓名 |
| **邮箱** | 登录邮箱，只读显示，不能在此处修改 |
| **手机号** | 联系电话，包含国家或地区代码 |
| **职位** | 可选职位信息 |
| **描述** | 可选个人说明 |

点击对话框左上区域的头像可上传新的头像图片。仅支持 `JPG`、`JPEG` 和 `PNG` 格式，文件大小必须小于 `1 MB`。

### 14.8.2.2 密码修改

使用用户名密码登录的用户在编辑个人信息时还可以修改密码。保存时，系统会要求再次输入当前密码进行确认。通过 OAuth 2.0 或其他单点登录方式登录的用户不会看到密码输入框。

## 14.8.3 API Key

用户 API Key 适合需要长期稳定凭据的脚本、CLI 和 MCP 客户端。API Key 继承创建者当前用户的权限范围，调用接口时需要放入 `Authorization: Bearer <IDMP_API_KEY>` 请求头中。复制得到的 API Key 本身以 `api_` 开头，不包含 `Bearer` 前缀。

### 14.8.3.1 列表信息

**API Key** 页签中的列表默认按创建时间倒序显示，并提供以下信息与操作：

| 列或操作 | 说明 |
|---|---|
| **标题** | 用户自定义标题；同一用户下必须唯一 |
| **API Key** | 以掩码形式显示的 API Key；点击复制图标可再次复制完整值 |
| **添加时间** | API Key 的创建日期 |
| **到期时间** | 当前到期时间；点击该值可打开“修改到期日”对话框 |
| **删除** | 删除该 API Key，确认后立即失效 |

### 14.8.3.2 创建 API Key

1. 切换到 **API Key** 页签，点击 **新增 API Key**。
2. 输入唯一标题。
3. 在**永不过期**和**到期日期**之间选择一种过期策略。如果指定日期，所选时间必须晚于当前时间。
4. 点击**创建**。
5. 创建成功后，系统会弹出对话框显示完整 API Key。请立即复制并妥善保存。

列表页仅显示掩码。如果后续需要再次获取完整值，可使用列表行内的复制按钮。

### 14.8.3.3 修改到期时间

点击目标 API Key 在**到期时间**列中的当前值，可打开**修改到期日**对话框。标题在该对话框中保持只读，您可以重新选择**永不过期**或新的**到期日期**。

### 14.8.3.4 删除 API Key

点击目标 API Key 行末的删除图标并确认后，该 API Key 将立即失效。对于不再使用的自动化脚本或外部工具，建议及时删除对应的 API Key。

### 14.8.3.5 使用方式与限制

- API Key 适用于需要长期稳定凭据的集成场景，例如 CLI、脚本或 MCP 客户端。
- 请求头格式为 `Authorization: Bearer <IDMP_API_KEY>`。如果客户端单独要求 Bearer Token 值，仅填写原始 `api_...` 形式的 API Key 即可。
- API Key 继承创建者当前用户的角色权限与元素访问范围。
- 当 API Key 到期、被删除，或所属用户被停用或删除后，该 API Key 将立即失效。
- 使用 API Key 鉴权的请求不能访问 API Key 管理接口；这包括查看列表、创建、复制、修改和删除。此类管理操作需要在已登录的 Web UI 中完成。

有关在 SDK 和 MCP 客户端中使用 API Key 的示例，请参见[第 15.1.3 节](../15-integrating-with-other-systems/01-client-sdk/03-authentication.md)和[第 15.2 节](../15-integrating-with-other-systems/02-mcp-interface.md)。

## 14.8.5 Agent

**Agent** 标签页用于基于 MCP 模板配置个人 MCP 服务器连接。管理员在[基础库 → Agentic AI → MCP 模板](../13-libraries/05-agentic-ai.md#1352-mcp-模板)中定义模板后，用户在此处为每个模板填写变量值，完成个人 MCP 连接的配置。

### 14.8.5.1 模板列表

列表显示所有由管理员创建且已启用的 MCP 模板，包含以下信息：

| 列             | 说明                                             |
| -------------- | ------------------------------------------------ |
| **名称**       | MCP 模板名称                                     |
| **URL / 命令** | HTTP/SSE 类型显示 URL，命令类型显示启动命令      |
| **状态**       | 连接状态，取决于模板是否包含变量及变量是否已配置 |

每个模板的状态分为以下几种：

| 状态         | 说明                                     |
| ------------ | ---------------------------------------- |
| **自动可用** | 模板未定义变量，无需用户配置即可直接使用 |
| **需要配置** | 模板定义了变量，尚未填写变量值           |
| **已配置**   | 变量已填写，连接可用                     |

### 14.8.5.2 配置变量

对于包含变量的模板，点击行末的设置图标打开**变量配置**对话框。对话框中会列出模板定义的所有变量及说明，用户逐一填写变量值后保存即可。

需要修改变量值时，可再次打开变量配置对话框进行修改。如需清除已配置的变量值，点击行末的删除图标即可恢复为未配置状态。

### 14.8.5.3 变量敏感信息

如果变量被标记为敏感信息，其值在界面中将始终以掩码形式显示。配置后敏感变量的值不可再次查看，只能重新填写。

## 14.8.6 Passkey

**Passkey** 页签用于注册和管理用于二次认证（MFA）的 Passkey。Passkey 是基于 WebAuthn 的无密码凭据，私钥保存在你的设备钥匙串中，验证时通过指纹、面容或设备 PIN 确认本人。完整的二次认证流程、Passkey 注册与删除、以及管理员侧的 MFA 豁免配置，详见[第 14.10 节 二次认证（MFA）](10-mfa.md)。
